# mkdocs-tale

./: .gitignore  README.md  pyproject.toml
tale/: filters.py  plugins.py
tale/templates/: base.html  list.html  main.html
tale/templates/assets/styles/: main.css
