[project]
name = "mkdocs-tale"
version = "0.1.0"
description = "A simple theme of mkdocs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mkdocs>=1.6.1",
]

[project.urls]
Source = 'https://github.com/RyanPoy/mkdocs-tale'
Issues = 'https://github.com/RyanPoy/mkdocs-tale/issues'

[project.entry-points."mkdocs.plugins"]
tale = "tale.plugins:TalePlugin"

[project.entry-points."mkdocs.themes"]
tale = "tale.templates"